--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
+    "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.0",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
