--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_IMGBB_API_KEY=886003e1b6aea469ffabcc85840386aa
+
+VITE_APIKEY= AIzaSyD6apGck7B6Q3gCEYX_WA8eSfBMXri0DEA
+VITE_AUTHDOMAIN= chronix-76387.firebaseapp.com
+VITE_PROJECTID= chronix-76387
+VITE_STORAGEBUCKET= chronix-76387.appspot.com
+VITE_MESSAGINGSENDERID= 1005642602655
+VITE_APPID= 1:1005642602655:web:ee25f6f6dd0b859a486aaa
